--- a/Cheatsheet/cheatsheet_test.css
+++ b/Cheatsheet/cheatsheet_test.css
@@ -47,34 +47,26 @@ aside .btn[aria-expanded="true"]::before {
 
 /** MAIN **/
 
-main .main-section .content {
-  margin-top: 2rem;
-}
-
-/** CONTENT **/
-.content-title {
-  margin-bottom: 1.5rem;
-}
-
-.content .content-title a {
-  display: flex;
-  align-items: center;
-}
-
-.content .content-title a::before {
+main .sticky-box-title a {
   display: inline-block;
   width: 1.5rem;
   height: 1.5rem;
+  padding: 0 1.5rem;
   content: "";
-  color: red;
   background-image: url("data:image/svg+xml,%3Csvg width='800px' height='800px' viewBox='0 0  24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19 3.25001H6.75C6.10713 3.23114 5.483 3.4679 5.01439 3.9084C4.54577 4.3489 4.2709 4.9572 4.25 5.60001V18C4.27609 18.7542 4.60027 19.4673 5.15142 19.9829C5.70258 20.4984 6.43571 20.7743 7.19 20.75H19C19.1981 20.7474 19.3874 20.6676 19.5275 20.5275C19.6676 20.3874 19.7474 20.1981 19.75 20V4.00001C19.7474 3.8019 19.6676 3.61264 19.5275 3.47254C19.3874 3.33245 19.1981 3.2526 19 3.25001ZM18.25 19.25H7.19C6.83339 19.2748 6.48151 19.1571 6.21156 18.9227C5.94161 18.6884 5.77562 18.3566 5.75 18C5.77562 17.6435 5.94161 17.3116 6.21156 17.0773C6.48151 16.843 6.83339 16.7253 7.19 16.75H18.25V19.25ZM18.25 15.25H7.19C6.68656 15.2506 6.19135 15.3778 5.75 15.62V5.60001C5.7729 5.3559 5.89028 5.13039 6.0771 4.9716C6.26392 4.8128 6.50538 4.73329 6.75 4.75001H18.25V15.25Z' fill='%23000000'/%3E%3Cpath d='M8.75 8.75H15.25C15.4489 8.75 15.6397 8.67098 15.7803 8.53033C15.921 8.38968 16 8.19891 16 8C16 7.80109 15.921 7.61032 15.7803 7.46967C15.6397 7.32902 15.4489 7.25 15.25 7.25H8.75C8.55109 7.25 8.36032 7.32902 8.21967 7.46967C8.07902 7.61032 8 7.80109 8 8C8 8.19891 8.07902 8.38968 8.21967 8.53033C8.36032 8.67098 8.55109 8.75 8.75 8.75Z' fill='%23000000'/%3E%3Cpath d='M8.75 12.25H15.25C15.4489 12.25 15.6397 12.171 15.7803 12.0303C15.921 11.8897 16 11.6989 16 11.5C16 11.3011 15.921 11.1103 15.7803 10.9697C15.6397 10.829 15.4489 10.75 15.25 10.75H8.75C8.55109 10.75 8.36032 10.829 8.21967 10.9697C8.07902 11.1103 8 11.3011 8 11.5C8 11.6989 8.07902 11.8897 8.21967 12.0303C8.36032 12.171 8.55109 12.25 8.75 12.25Z' fill='%23000000'/%3E%3C/svg%3E");
   background-size: 1.5rem;
   background-repeat: no-repeat;
 }
 
-/* .content-main .content-main-section {
-  margin-bottom: 0rem;
-} */
+@media (max-width: 1200px) {
+  main .col-lg-2 {
+    margin-bottom: 15rem;
+  }
+
+  main .sticky-box-title {
+    background: red !important;
+  }
+}
 
 /*! *********************************************************************************************************/
 @media (min-width: 1200px) {
@@ -105,36 +97,29 @@ main .main-section .content {
     margin-bottom: 4rem;
   }
 
-  main .main-section .main-section-title {
+  main h2.sticky-title {
     position: sticky;
     top: 3.9rem;
-    width: 14rem;
+    width: 12.1rem;
+    margin-bottom: 0;
     line-height: 1rem;
     font-size: 2rem;
     font-weight: bolder;
     z-index: 5;
     box-shadow: -1.5rem 0 1.5rem 0.5rem white;
-    /* background: red; */
   }
 
-  /** CONTENT **/
-  .content {
-    display: grid;
-    grid-template-areas: "title main";
-    grid-template-columns: 20% 80%;
-    /* background: lime; */
-  }
-
-  .content .content-title {
-    grid-area: title;
+  main .sticky-box-title {
     position: sticky;
     top: 7.25rem;
-    align-self: start;
-    /* background-color: red; */
   }
 
-  .content .content-main {
-    grid-area: main;
-    padding: 0rem 1rem;
+  main .sticky-box-title h3 {
+    font-size: 1.5rem;
+  }
+
+  main .col-xl-2 + .col-xl-10 {
+    padding: 0 3.25rem;
+    /* background-color: red; */
   }
 }
